--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
                 <li>Fioletowy</li>
                 <li>Różowy</li>
             </ul>
-    </nav>
-            <main>
-                <img src="https://thumb.ac-illust.com/1e/1ea7f87e6bb2da51d54b692c863c405e_t.jpeg" alt="zebatki" />
+    <img src="zębatki.png" alt="zebatki" />
             </main>
     <footer>
         <p>Mateusz Domin</p>
